remove admin role, add clientUser role, restrict lofin access
